<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="TypographyDashes">
    <string name="app_name">Deportiva</string>
    <string name="action_settings">Settings</string>
    <string name="icono_linea">Icono de cada linea</string>
    <string name="portero">Porteros</string>
    <string name="defensa">Defensas</string>
    <string name="centro">Centrocampistas</string>
    <string name="delantero">Delanteros</string>
    <string name="nombredeportivo">Nombre deportivo:</string>
    <string name="nombre">Nombre completo:</string>
    <string name="posicion">Posición:</string>
    <string name="nacimiento">Fecha nacimiento:</string>
    <string name="nacido">Nació en:</string>
    <string name="peso">Peso:</string>
    <string name="estatura">Estatura:</string>
    <string name="procedencia">Procedencia:</string>
    <string name="dorsal">Dorsal:</string>
    <string name="title_activity_dinu">Dinu Moldovan</string>
    <string name="nombre_depor_dinu">Dinu</string>
    <string name="nombre_dinu">Dinu Moldovan Bogdam</string>
    <string name="posicion_portero">Portero</string>
    <string name="nacimiento_dinu">03/05/1990</string>
    <string name="pais_dinu">Albalulia(Rumanía)</string>
    <string name="peso_dinu">72</string>
    <string name="estatura_dinu">1.83 m.</string>
    <string name="proc_dinu">SD Ponferradina</string>
    <string name="dorsal_dinu">25</string>
    <string name="title_activity_prieto">Prieto</string>
    <string name="nombre_depor_prieto">Prieto</string>
    <string name="nombre_prieto">Francisco Javier Prieto Caroca</string>
    <string name="nacimiento_prieto">01/07/1983</string>
    <string name="pais_prieto">Antofagasta(Chile)</string>
    <string name="peso_prieto">79</string>
    <string name="estatura_prieto">1.88 m.</string>
    <string name="proc_prieto">Mirandés</string>
    <string name="dorsal_prieto">13</string>
    <string name="title_activity_kepa">Kepa Arrizabalaga</string>
    <string name="nombre_depor_kepa">Arrizabalaga</string>
    <string name="nombre_kepa">Kepa Arrizabalaga Revuelta</string>
    <string name="nacimiento_kepa">03/10/1994</string>
    <string name="pais_kepa">Ondárroa(Vizcaya)</string>
    <string name="peso_kepa">85</string>
    <string name="estatura_kepa">1.89 m.</string>
    <string name="proc_kepa">Athletic Club</string>
    <string name="dorsal_kepa">1</string>
    <string name="title_activity_carpio">Carpio</string>
    <string name="nombre_depor_carpio">Carpio</string>
    <string name="nombre_carpio">Javier Carpio Martín</string>
    <string name="posicion_defensa">Defensa</string>
    <string name="nacimiento_carpio">06/04/1984</string>
    <string name="pais_carpio">Salamanca</string>
    <string name="peso_carpio">72</string>
    <string name="estatura_carpio">1.75 m.</string>
    <string name="proc_carpio">SD Ponferradina</string>
    <string name="dorsal_carpio">2</string>
    <string name="title_activity_alan">Alan Baró</string>
    <string name="nombre_depor_alan">Alan</string>
    <string name="nombre_alan">Alan Baró Calabuig</string>
    <string name="nacimiento_alan">22/06/1985</string>
    <string name="pais_alan">Darnius(Girona)</string>
    <string name="peso_alan">73</string>
    <string name="presidente">Presidente:</string>
    <string name="presidente_nombre">Don José Fernández Nieto (12 temporadas en el cargo)</string>
    <string name="vicepresidente">Vicepresidente:</string>
    <string name="vicepresidente_nombre">D.Carlos Castañeiras Folgueral</string>
    <string name="secretario">Secretario:</string>
    <string name="secretario_nombre">D.Domingo Lago Díaz</string>
    <string name="consejero_delegado">Consejero delegado:</string>
    <string name="consejero_delegado_nombre">D.Eduardo Domínguez Garnelo y D.Juan Manceñido Prieto</string>
    <string name="area_economica">Área económica:</string>
    <string name="area_economica_nombre">D.Carlos Castañeiras,D.José Barba Pacios y D.José Barba Merayo</string>
    <string name="area_social">Área social:</string>
    <string name="area_social_nombre">D.Pedro Fernández Nieto y D.Juan Manciñedo Prieto</string>
    <string name="area_deportiva">Área deportiva:</string>
    <string name="area_deportiva_nombre">D.Antonio Blanco Ravena y D.Alfonso Rodríguez-Hevia González</string>
    <string name="marketing_comunicacion">Marketing/Comunicación:</string>
    <string name="marketing_comunicacion_nombre">D.Fernando Castañeiras Folgueral</string>
    <string name="desc">Esto es una imagen</string>
    <string name="desc_boton">Esto es una imagen en un boton</string>
    <string name="ingresos">Ingresos</string>
    <string name="gastos">Gastos</string>
    <string name="organigrama">Organigrama</string>
    <string name="descargar_cuentas_sdp">Descargar cuentas SDP</string>
    <string name="titulo_1970">Años 70</string>
    <string name="texto_1970">La Ponferradina entra en una fase de penurias económicas y deportivas que llevan al descenso al final de la campaña 1973-1974 y a la venta del campo de Santa Marta, propiedad del Club, celebrándose el último partido en dicho terreno el 16 de marzo de 1975 pasando a jugar en Fuentesnuevas.</string>
    <string name="texto_1975">En año 75 Vuelven a Tercera habiendo perdido solo cinco encuentros de los treinta y ocho jugados.</string>
    <string name="titulo_1980">Años 80</string>
    <string name="texto_1980">En la primera temporada de la década de los ochenta la Deportiva llega a la tercera ronda de la Copa enfrentándose al Sporting de Gijón y terminando segunda en la tabla clasificatoria lo que supone volver a jugar el ascenso.</string>
    <string name="texto_1986">En la temporada 1986-1987 la Ponferradina consigue el ascenso directo a Segunda B, se muestra intratable y solo pierde tres de los cuarenta encuentros disputados, lo que supone la primera posición y el ascenso directo que se otorga a los 3 primeros.</string>
    <string name="Titulo_1990">Años 90</string>
    <string name="texto_1990">En la 1990-1991 llega a la cuarta ronda de la Copa del Rey correspondiendo eliminarse con el Zaragoza que gana en campo ponferradino por 2-1, pero no pasa del empate en La Romareda.</string>
    <string name="texto_1992">En la campaña 1992-1993 dado que en la tercera eliminatoria le Temporada 2008/2009corresponde el Sevilla donde juega Maradona. Como es lógico los andaluces eliminan a los bercianos.</string>
    <string name="texto_1993">En la temporada 1993-1994  Un descenso que trae también una caótica situación económica del Club. Un nuevo grupo gestor, encabezado por Martín Pérez, toma las riendas en una lucha contra el calendario para recaudar con urgencia quince millones. La movilización es total tratando de sensibilizar a la ciudad de la inminente desaparición de la entidad. Al final se produce el milagro, la Deportiva liquida sus deudas y comienza una nueva andadura por Tercera.</string>
    <string name="texto_1998">En la campaña 1998-1999 juega la fase de ascenso, donde no pierde ningún partido, retornado a Segunda B.</string>
    <string name="texto_1999">La primera campaña (1999-2000) de su regreso a la categoría no es buena y se salva del descenso en la última jornada. Para entonces se ha realizado un relevo en la dirección del Club pasando a regir sus destinos José Fernández Nieto.</string>
    <string name="grafico_temporadas">Gráfico con los puestos y temporadas.</string>
    <string name="titulo_2000">Años 2000-actualidad</string>
    <string name="texto_2003">En la 2003-2004 Miguel A. Alvarez Tomé releva a Simón Pérez en el banquillo y consigue clasificar al equipo en una meritoria 7ª posición que da opción a participar en la Copa de S.M. El Rey.</string>
    <string name="texto_2004">La temporada 2004-2005 ha culminado con el equipo campeón de su grupo (II de 2ªB).</string>
    <string name="texto_2005">En la temporada 2005-2006 La S.D.Ponferradina consigue el ascenso a segunda división del fútbol español.</string>
    <string name="texto_recibimiento">El equipo a su regreso, fué recibido por miles de seguidores en la ciudad, que le acompañaron en su recorrido triunfal desde el estadio hasta la Plaza del Ayuntamiento, donde cerca de 20.000 personas, presenciaron la recepción efectuada por el Ayuntamiento de Ponferrada y pudieron contemplar a todos los integrantes de la plantilla blanquiazul en el balcón municipal.</string>
    <string name="titulo_2006">Temporada 2006/2007</string>
    <string name="texto_2006">Se comienza la temporada con mucha ilusión por parte de la plantilla y por parte de la afición que se vuelca con el equipo, llenando el estadio habitualmente. Desgraciadamente se queda en el puesto 19 y se desciende a 2ªB.</string>
    <string name="titulo_2007">Temporada 2007/2008</string>
    <string name="texto_2007">La secretaría técnica confecciona una plantilla de garantías que llevará al equipo a ocupar la primera plaza de su grupo. Por tercera vez disputará una fase de ascenso. El destino querría que para la eliminatoria final el Alicante, al que los bercianos habían privado del ascenso dos temporadas antes, fuese el rival de “La Ponfe”, esta vez la gloria se la lleva el Alicante CF.</string>
    <string name="titulo_2008">Temporada 2008/2009</string>
    <string name="texto_2008">Se alcanza la tercera plaza, suficiente para jugar una temporada más la fase de ascenso. Para esta temporada las reglas de los playoff han cambiado y será necesario superar tres eliminatorias. Se cae en segunda ronda ante el Real Jaén.</string>
    <string name="texto_sociedad_anonima">La Sociedad Deportiva Ponferradina se convirtió en sociedad anónima deportiva (SAD) el 19 de febrero de 2009.</string>
    <string name="titulo_2009">Temporada 2009/2010</string>
    <string name="texto_2009">En esta temporada la Ponferradina queda primera del grupo II de la Segunda División B. En el play-off de ascenso le tocará el Sant Andreu, en el que en la ida quedará 0-1, con gol de Jonathan Valle, y en la vuelta, un desafortunado gol en propia meta de Nacho Fernández hace que el partido se decida en los penaltis. Fue una tanda de penaltis muy larga, en la que finalmente ganó la Ponferradina por 9-8, consiguiendo su segundo ascenso a segunda división.</string>
    <string name="titulo_2010">Temporada 2010/2011</string>
    <string name="texto_2010">El equipo no consigue el objetivo de la permanencia y desciende al final de la temporada a Segunda División B; además Oscar de Paula, anuncia su retirada del fútbol profesional unida a la lesión de duración indefinida del capitán Rubén Vega, hace que el club pierda sus referentes de los últimos años.</string>
    <string name="titulo_2011">Temporada 2011/2012</string>
    <string name="texto_2011">En el grupo II de Segunda División B, el equipo consigue la clasificación para la fase de ascenso, ocupando la segunda posición. En Copa de Rey llega a dieciseisavos de final, enfrentándose al Real Madrid. En la fase de ascenso elimina al Real Jaén 2-1 y 2-0, y al Lucena CF 2-1 y 3-0, consiguiendo en la tercera ronda ante el C.D. Tenerife, su tercer ascenso a la Segunda División tras imponerse 1-0 en la ida y 1-2 en la vuelta del 24 de junio de 2012, disputada en el Estadio Heliodoro Rodríguez López.</string>
    <string name="titulo_2012">Temporada 2012/2013</string>
    <string name="texto_2012">El equipo consiguió la salvación matemática con varias jornadas de antelación lo que provocó que la afición se ilusionara con la fase de ascenso. La disputa estuvo reñida pero sendos empates a dos ante el Racing (casa) y Lugo (Fuera) dejaron a la Ponferradina a 1 punto del soñado Play-off a Primera División, y terminando en un meritorio 7º puesto.</string>
    <string name="titulo_2013">Temporada 2013/2014</string>
    <string name="texto_2013">El equipo termina con 51 puntos en el puesto 16 manteniendo la categoría y se asegura jugar por tercera temporada consecutiva en Segunda División.</string>
</resources>